--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -69,6 +69,8 @@ if (LUA_FOUND OR LUAJIT_FOUND)
     list(APPEND osm2pgsql_lib_SOURCES tagtransform-lua.cpp)
 endif()
 
+list(APPEND osm2pgsql_lib_SOURCES ${PROJECT_BINARY_DIR}/src/version.cpp)
+
 add_library(osm2pgsql_lib STATIC ${osm2pgsql_lib_SOURCES})
 set_target_properties(osm2pgsql_lib PROPERTIES OUTPUT_NAME osm2pgsql)
 target_link_libraries(osm2pgsql_lib ${LIBS})
