--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -78,6 +78,7 @@ if (HAVE_LUA)
     set_test(test-output-flex-lua-fail)
     set_test(test-output-flex-uni)
     set_test(test-output-flex-tablespace LABELS Tablespace)
+    set_test(test-output-flex-types)
     set_test(test-output-flex-update)
     set_test(test-output-flex-validgeom)
 endif()
