integer_to_buffer class to cheaply convert integers to strings

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -62,6 +62,7 @@ set_test(test-parse-osmium)
 set_test(test-persistent-cache LABELS NoDB)
 set_test(test-ram-cache LABELS NoDB)
 set_test(test-taginfo LABELS NoDB)
+set_test(test-util LABELS NoDB)
 set_test(test-wildcard-match LABELS NoDB)
 
 # these tests require LUA support
