--- a/.travis.yml
+++ b/.travis.yml
@@ -108,7 +108,7 @@ before_script:
   - proj | head -n1
 
 script:
-  - mkdir build && cd build
+  - mkdir build && pushd build
   - cmake .. -DBUILD_TESTS=ON -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DCMAKE_CXX_STANDARD=${CPPVERSION} -DWITH_LUAJIT=${LUAJIT_OPTION}
   - make -j2
   - echo "Running tests ... "
@@ -120,6 +120,7 @@ script:
         if [[ $? -ne "0" ]]; then exit 2; fi
       done
     fi
+  - popd && cd flex-config && lua test-geometries.lua
 
 after_failure:
   - # rerun make, but verbosely
