Fiddle with coverage report
* Have better title
* Delete stats after building report so that the next run starts with
  empty stats.
* Remove unnecessary exclude

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,11 +129,12 @@ if (BUILD_COVERAGE)
             ${GCOVR}
             ${CMAKE_BINARY_DIR}
             --root=${CMAKE_SOURCE_DIR}
-            --html --html-details
+            --html-details
+            --html-title "osm2pgsql coverage report"
             #--verbose
             #--keep
+            --delete
             '--exclude=.*contrib.*'
-            '--exclude=.*catch.hpp'
             --sort-percentage
             --gcov-executable=${GCOV}${gcov_param_}
             --output=${coverage_report_dir}/index.html)
