New dependency manager class
Moves the code for dependency management out of the middle into its own
class.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 
 set(osm2pgsql_lib_SOURCES
+  dependency-manager.cpp
   db-copy.cpp
   expire-tiles.cpp
   gazetteer-style.cpp
@@ -31,6 +32,7 @@ set(osm2pgsql_lib_SOURCES
   tagtransform.cpp
   util.cpp
   wildcmp.cpp
+  dependency-manager.hpp
   db-copy.hpp
   expire-tiles.hpp
   gazetteer-style.hpp
