Finish schema support in flex output
This completes the schema support for the flex output.

You have to define a schema before using it. osm2pgsql might not have
the needed permissions for creating a schema, so it will not try to
create it.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -60,6 +60,7 @@ set_test(test-output-pgsql-validgeom)
 set_test(test-output-pgsql-z_order)
 set_test(test-parse-osmium)
 set_test(test-persistent-cache LABELS NoDB)
+set_test(test-pgsql)
 set_test(test-ram-cache LABELS NoDB)
 set_test(test-taginfo LABELS NoDB)
 set_test(test-util LABELS NoDB)
