--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -78,6 +78,7 @@ if (HAVE_LUA)
     set_test(test-output-flex-extra)
     set_test(test-output-flex-invalid-geom)
     set_test(test-output-flex-lua-fail)
+    set_test(test-output-flex-nogeom)
     set_test(test-output-flex-uni)
     set_test(test-output-flex-tablespace LABELS Tablespace)
     set_test(test-output-flex-types)
