Make clustering by geometry optional in flex output
Set table option cluster=false to disable it.

See #27

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -75,6 +75,7 @@ if (HAVE_LUA)
     set_test(test-output-flex-area)
     set_test(test-output-flex-attr)
     set_test(test-output-flex-bbox)
+    set_test(test-output-flex-cluster)
     set_test(test-output-flex-extra)
     set_test(test-output-flex-invalid-geom)
     set_test(test-output-flex-lua-fail)
