--- a/.travis.yml
+++ b/.travis.yml
@@ -58,7 +58,7 @@ matrix:
       dist: trusty
       compiler: "clang-3.8"
       env: T="clang38_pg92_dbtest" LUAJIT_OPTION="OFF"
-           CXXFLAGS="-pedantic -Wextra -Werror"
+           CXXFLAGS="-pedantic -Wextra -Werror -Wno-deprecated-declarations"
            CC=clang-3.8 CXX=clang++-3.8
       addons: *clang38_pg92
 
@@ -66,7 +66,7 @@ matrix:
       dist: trusty
       compiler: "clang-7"
       env: T="clang7_pg96_dbtest_luajit" LUAJIT_OPTION="ON"
-           CXXFLAGS="-pedantic -Wextra -Werror"
+           CXXFLAGS="-pedantic -Wextra -Werror -Wno-deprecated-declarations"
            CC=clang-7 CXX=clang++-7
       addons: *clang7_pg96
 
@@ -74,7 +74,7 @@ matrix:
     - os: osx
       compiler: clang
       env: T="osx_clang_NoDB" LUAJIT_OPTION="OFF" TEST_NODB=1
-           CXXFLAGS="-pedantic -Wextra -Werror"
+           CXXFLAGS="-pedantic -Wextra -Werror -Wno-deprecated-declarations"
       before_install:
         - brew install lua; brew install lua
       before_script:
@@ -87,7 +87,7 @@ matrix:
       dist: trusty
       compiler: "gcc-4.8"
       env: T="gcc48_pg96_dbtest" LUAJIT_OPTION="OFF"
-           CXXFLAGS="-pedantic -Wextra -Werror"
+           CXXFLAGS="-pedantic -Wextra -Werror -Wno-deprecated-declarations"
            CC=gcc-4.8 CXX=g++-4.8
       addons: *gcc48_pg96
 
@@ -95,7 +95,7 @@ matrix:
       dist: trusty
       compiler: gcc-8
       env: T="gcc8_pg96_dbtest_luajit" LUAJIT_OPTION="ON"
-           CXXFLAGS="-pedantic -Wextra -Werror"
+           CXXFLAGS="-pedantic -Wextra -Werror -Wno-deprecated-declarations"
            CC=gcc-8 CXX=g++-8
       addons: *gcc8_pg96
 
