--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -118,11 +118,13 @@ else()
     message(WARNING "Can not find python, regression test disabled")
 endif()
 
-if(LUA_EXE)
-    message(STATUS "Added test: lua-lib")
-    add_test(NAME lua-lib COMMAND ${LUA_EXE} lua/tests.lua
-             WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
-    set_tests_properties(lua-lib PROPERTIES LABELS NoDB)
-else()
-    message(WARNING "Can not find Lua interpreter, test 'lua-lib' disabled")
+if (HAVE_LUA)
+    if (LUA_EXE)
+        message(STATUS "Added test: lua-lib")
+        add_test(NAME lua-lib COMMAND ${LUA_EXE} lua/tests.lua
+                WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+        set_tests_properties(lua-lib PROPERTIES LABELS NoDB)
+    else()
+        message(WARNING "Can not find Lua interpreter, test 'lua-lib' disabled")
+    endif()
 endif()
