--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -76,6 +76,7 @@ if (HAVE_LUA)
     set_test(test-output-flex-attr)
     set_test(test-output-flex-bbox)
     set_test(test-output-flex-invalid-geom)
+    set_test(test-output-flex-line)
     set_test(test-output-flex-lua-fail)
     set_test(test-output-flex-nogeom)
     set_test(test-output-flex-uni)
