--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -85,6 +85,11 @@ if (HAVE_LUA)
     set_test(test-output-flex-types)
     set_test(test-output-flex-update)
     set_test(test-output-flex-validgeom)
+
+    set_test(test-output-flex-example-configs)
+    set(FLEX_EXAMPLE_CONFIGS "compatible,data-types,default-config,geometries,route-relations,simple,unitable")
+    # places.lua not tested because it needs dkjson package
+    set_tests_properties(test-output-flex-example-configs PROPERTIES ENVIRONMENT "EXAMPLE_FILES=${FLEX_EXAMPLE_CONFIGS}")
 endif()
 
 
