--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -78,8 +78,12 @@ if (HAVE_LUA)
     set_test(test-output-flex-invalid-geom)
     set_test(test-output-flex-line)
     set_test(test-output-flex-lua-fail)
+    set_test(test-output-flex-nodes)
     set_test(test-output-flex-nogeom)
     set_test(test-output-flex-uni)
+    set_test(test-output-flex-relations)
+    set_test(test-output-flex-relation-changes)
+    set_test(test-output-flex-relation-combinations)
     set_test(test-output-flex-stage2)
     set_test(test-output-flex-tablespace LABELS Tablespace)
     set_test(test-output-flex-types)
