Add more way tests for flex output

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -89,6 +89,11 @@ if (HAVE_LUA)
     set_test(test-output-flex-types)
     set_test(test-output-flex-update)
     set_test(test-output-flex-validgeom)
+    set_test(test-output-flex-way-add)
+    set_test(test-output-flex-way-change)
+    set_test(test-output-flex-way-del)
+    set_test(test-output-flex-way-relation-add)
+    set_test(test-output-flex-way-relation-del)
 
     set_test(test-output-flex-example-configs)
     set(FLEX_EXAMPLE_CONFIGS "compatible,data-types,default-config,geometries,route-relations,simple,unitable")
