--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,18 @@ matrix:
     - os: linux
       dist: bionic
       compiler: gcc-8
-      env: T="bionic_gcc8_all_luajit_release"
-           PG_VERSIONS="9.3 9.4 9.5 9.6 10 11 12"
+      env: T="bionic_gcc8_all_9_luajit_release"
+           PG_VERSIONS="9.3 9.4 9.5 9.6"
+           LUA_VERSION=5.3
+           BUILD_TYPE="Release" LUAJIT_OPTION="ON"
+           CXXFLAGS="-pedantic -Wextra -Werror"
+           CC=gcc-8 CXX=g++-8 CPPVERSION=14
+
+    - os: linux
+      dist: bionic
+      compiler: gcc-8
+      env: T="bionic_gcc8_all_10+_luajit_release"
+           PG_VERSIONS="10 11 12"
            LUA_VERSION=5.3
            BUILD_TYPE="Release" LUAJIT_OPTION="ON"
            CXXFLAGS="-pedantic -Wextra -Werror"
