test-parse-osmium: do not call osmdata.stop()
The test only checks the parsing stage and does not use a database
at all. Calling stop() will try to open a database connection for
the postprocessing. This does odd things because the connection
string has not been set up. We don't need stop() for the test,
so just drop it and mark the test as NoDB.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -58,7 +58,7 @@ set_test(test-output-pgsql-schema)
 set_test(test-output-pgsql-tablespace LABELS Tablespace)
 set_test(test-output-pgsql-validgeom)
 set_test(test-output-pgsql-z_order)
-set_test(test-parse-osmium)
+set_test(test-parse-osmium LABELS NoDB)
 set_test(test-persistent-cache LABELS NoDB)
 set_test(test-pgsql)
 set_test(test-ram-cache LABELS NoDB)
