Keep the man page in markdown format and compile it with pandoc
This makes the man page easier to update and it can be included more
easily into the documentation on the osm2pgsql website.

The man page now lives in docs/osm2pgsql.md and is converted using "make
man". This uses pandoc which is readily available as packages on all
major Linux distributions and on macOS to compile the man page into the
special format for man pages.

The compiled version is still checked into the repository at the old
location docs/osm2pgsql.1 to make it easier for users.

This also installs pandoc in Linux and macOS CI builds and compiles the
man page there.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ addons:
   apt:
     packages: ['python3-psycopg2', 'libexpat1-dev', 'libpq-dev', 'libbz2-dev',
                'libproj-dev', 'libluajit-5.1-dev',
-               'libboost-dev', 'libboost-system-dev', 'libboost-filesystem-dev']
+               'libboost-dev', 'libboost-system-dev', 'libboost-filesystem-dev',
+               'pandoc']
 
 # env: T="...."     //  please set an unique test id (T="..")
 matrix:
@@ -144,7 +145,7 @@ script:
   - mkdir build && cd build
   - if [ -z "${LUA_VERSION}" ]; then LUA_OPTIONS="-DWITH_LUA=OFF"; else LUA_OPTIONS="-DWITH_LUA=ON -DWITH_LUAJIT=${LUAJIT_OPTION}"; fi
   - cmake .. -LA -DBUILD_TESTS=ON -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DCMAKE_CXX_STANDARD=${CPPVERSION} ${LUA_OPTIONS}
-  - make -j2
+  - make -j2 all man
   - echo "Running tests ... "
   - if [[ $TEST_NODB ]]; then
       ctest --output-on-failure -L NoDB;
