--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
 
       - name: Install prerequisits
         run: |
-          brew install lua boost postgis
+          brew install lua boost postgis pandoc
           pip3 install psycopg2
         shell: bash
 
@@ -31,7 +31,7 @@ jobs:
         shell: bash
 
       - name: build
-        run: cd build && make -j2
+        run: cd build && make -j2 all man
         shell: bash
 
       - name: test
