Print database version and do version check after startup
Right after startup, connect to the database and print and check the
database version.

This introduced a new function check_db() which does this check and can
later be extended to do other checks on the database, for instance the
PostGIS version etc.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,9 @@ option(EXTERNAL_LIBOSMIUM "Do not use the bundled libosmium" OFF)
 option(EXTERNAL_PROTOZERO "Do not use the bundled protozero" OFF)
 option(EXTERNAL_FMT       "Do not use the bundled fmt"       OFF)
 
+set(MINIMUM_POSTGRESQL_SERVER_VERSION "9.3")
+set(MINIMUM_POSTGRESQL_SERVER_VERSION_NUM "90300")
+
 #############################################################
 # Version
 #############################################################
