--- a/src/version.cpp.in
+++ b/src/version.cpp.in
@@ -1,9 +1,21 @@
 
-char const *get_osm2pgsql_version() noexcept {
+char const *get_osm2pgsql_version() noexcept
+{
     return "@PACKAGE_VERSION@@VERSION_FROM_GIT@";
 }
 
-char const *get_osm2pgsql_short_version() noexcept {
+char const *get_osm2pgsql_short_version() noexcept
+{
     return "@PACKAGE_VERSION@";
+}
+
+char const *get_minimum_postgresql_server_version() noexcept
+{
+    return "@MINIMUM_POSTGRESQL_SERVER_VERSION@";
+}
+
+unsigned long get_minimum_postgresql_server_version_num() noexcept
+{
+    return @MINIMUM_POSTGRESQL_SERVER_VERSION_NUM@;
 }
 
