--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -86,6 +86,7 @@ if (HAVE_LUA)
     set_test(test-output-flex-relations)
     set_test(test-output-flex-relation-changes)
     set_test(test-output-flex-relation-combinations)
+    set_test(test-output-flex-schema)
     set_test(test-output-flex-stage2)
     set_test(test-output-flex-tablespace LABELS Tablespace)
     set_test(test-output-flex-types)
