Try upgrade/update

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,8 @@ jobs:
 
       - name: Install prerequisits
         run: |
-          brew info postgresql
-          brew upgrade postgresql
+          brew update
+          brew upgrade
           brew info postgresql
           brew install lua boost postgis pandoc
           pip3 install psycopg2
