Improve handling of multiple input files
Osm2pgsql can handle any number of input files. The old code will just
read the files one after the other which will not work if there is any
overlap between the files, i.e. if the same object is in two input
files.

The new code will read the files in parallel. We construct a priority
queue feeding in the next objects from all input files, taking off the
"smallest" one by one. If the same object is in multiple files, we
only process it once.

If there is only a single input file a shortcut is taken which basically
behaves like the old code.

Note that the input files have to be from the same point in time. If
there are multiple versions of the same object in the input, this will
still not magically work.

This commit removes support for unsorted input files which were already
deprecated.

See #1167

This commit removes support for negative ids which were already
deprecated.

Fixes #1097

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -46,6 +46,7 @@ set_test(test-middle)
 set_test(test-options-database LABELS NoDB)
 set_test(test-options-parse LABELS NoDB)
 set_test(test-options-projection)
+set_test(test-osmdata)
 set_test(test-output-gazetteer)
 set_test(test-output-multi-line)
 set_test(test-output-multi-point)
@@ -81,6 +82,7 @@ if (HAVE_LUA)
     set_test(test-output-flex-line)
     set_test(test-output-flex-lua-fail)
     set_test(test-output-flex-multigeom)
+    set_test(test-output-flex-multi-input)
     set_test(test-output-flex-nodes)
     set_test(test-output-flex-nogeom)
     set_test(test-output-flex-uni)
