Reinstate workaround for problem in CMake PostgreSQL module
The workaround removed in 00c80c71feff3b80cc10b268688d71ebce19ee4c
is actually needed, because the CMake module that implements the
find_package for PostgreSQL needs the PostgreSQL server libraries
installed. But we don't need those libraries at all (just the
client libraries).

See also https://stackoverflow.com/questions/13920383/findpostgresql-cmake-wont-work-on-ubuntu

--- a/.github/actions/build-and-test/action.yml
+++ b/.github/actions/build-and-test/action.yml
@@ -16,7 +16,7 @@ runs:
 
       - name: configure
         run: |
-          CMAKE_OPTIONS="-DPostgreSQL_TYPE_INCLUDE_DIR=/usr/include -LA -DBUILD_TESTS=ON"
+          CMAKE_OPTIONS="-LA -DBUILD_TESTS=ON"
           if [ -z "${LUA_VERSION}" ]; then
             CMAKE_OPTIONS="$CMAKE_OPTIONS -DWITH_LUA=OFF"
           else
