--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,8 @@ option(EXTERNAL_LIBOSMIUM "Do not use the bundled libosmium" OFF)
 option(EXTERNAL_PROTOZERO "Do not use the bundled protozero" OFF)
 option(EXTERNAL_FMT       "Do not use the bundled fmt"       OFF)
 
+set(USE_PROJ_LIB "auto" CACHE STRING "Which version of PROJ API to use: ('4', '6', 'off', or 'auto')")
+
 if (NOT WIN32 AND NOT APPLE)
     # No need for this path, just a workaround to make cmake work on all systems.
     # Without this we need the PostgreSQL server libraries installed.
@@ -202,22 +204,45 @@ find_package(Threads)
 
 set(LIBS ${Boost_LIBRARIES} ${PostgreSQL_LIBRARY} ${OSMIUM_LIBRARIES})
 
-find_path(PROJ4_INCLUDE_DIR proj_api.h)
-find_library(PROJ_LIBRARY NAMES proj)
-if (PROJ4_INCLUDE_DIR AND PROJ_LIBRARY)
-    message(STATUS "Found Proj4 ${PROJ_LIBRARY}")
-    set(HAVE_GENERIC_PROJ 1)
-    set(HAVE_PROJ4 1)
-    list(APPEND LIBS ${PROJ_LIBRARY})
-    include_directories(SYSTEM ${PROJ_INCLUDE_DIR})
+if (USE_PROJ_LIB STREQUAL "off")
+    message(STATUS "Proj library disabled (because USE_PROJ_LIB is set to 'off').")
 else()
-    message(STATUS "Proj library not found.")
-    message(STATUS "    Only Mercartor and WGS84 projections will be available.")
+    find_path(PROJ4_INCLUDE_DIR proj_api.h)
+    if (PROJ4_INCLUDE_DIR AND NOT USE_PROJ_LIB STREQUAL "6")
+        message(STATUS "Found proj_api.h")
+        find_library(PROJ_LIBRARY NAMES proj)
+        message(STATUS "Found Proj [API 4] ${PROJ_LIBRARY}")
+        set(HAVE_GENERIC_PROJ 1)
+        set(HAVE_PROJ4 1)
+        list(APPEND LIBS ${PROJ_LIBRARY})
+        include_directories(SYSTEM ${PROJ4_INCLUDE_DIR})
+    elseif (NOT USE_PROJ_LIB STREQUAL "4")
+        find_path(PROJ6_INCLUDE_DIR proj.h)
+        find_library(PROJ_LIBRARY NAMES proj)
+        if (PROJ_LIBRARY)
+            message(STATUS "Found Proj [API 6] ${PROJ_LIBRARY}")
+            set(HAVE_GENERIC_PROJ 1)
+            set(HAVE_PROJ6 1)
+            list(APPEND LIBS ${PROJ_LIBRARY})
+            include_directories(SYSTEM ${PROJ6_INCLUDE_DIR})
+        else()
+            message(STATUS "Proj library not found.")
+            message(STATUS "    Only Mercartor and WGS84 projections will be available.")
+        endif()
+    endif()
+endif()
+
+if (USE_PROJ_LIB STREQUAL "4" AND NOT HAVE_PROJ4)
+    message(FATAL_ERROR "USE_PROJ_LIB was set to '4', but PROJ version 4 API not found")
+endif()
+
+if (USE_PROJ_LIB STREQUAL "6" AND NOT HAVE_PROJ6)
+    message(FATAL_ERROR "USE_PROJ_LIB was set to '6', but PROJ version 4 API not found")
 endif()
 
 if (LUAJIT_FOUND)
     list(APPEND LIBS ${LUAJIT_LIBRARIES})
-elseif(LUA_FOUND)
+elseif (LUA_FOUND)
     list(APPEND LIBS ${LUA_LIBRARIES})
 endif()
 
