--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,7 +17,7 @@ environment:
     POSTGRESQL_VER: 11.2
     TESTS_POSTGRESQL_ROOT: C:\Progra~1\PostgreSQL\9.6
     POSTGIS_VER: 2.4.3
-    POSTGIS_URL: "https://lonvia.dev.openstreetmap.org/osm2pgsql-winbuild/postgis-bundle-pg96-2.4.3x64.zip"
+    POSTGIS_URL: "https://osm2pgsql.org/ci/winbuild/postgis-bundle-pg96-2.4.3x64.zip"
     PGUSER: postgres
     PGPASSWORD: Password12!
 
@@ -38,7 +38,7 @@ init:
   - set conda_path=C:\Miniconda36-x64\Scripts
   - set python_path=C:\Python38-x64
   - set conda_library_path=C:\Miniconda36-x64\envs\osm2pgsql\Library
-  - set lua_url=https://lonvia.dev.openstreetmap.org/osm2pgsql-winbuild/lua_x64.zip
+  - set lua_url=https://osm2pgsql.org/ci/winbuild/lua_x64.zip
   - set build_type=Release
   - '"C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall" %vcvarsall_arg%'
 
