Move low-level geom functions into their own file and test them

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ set(osm2pgsql_lib_SOURCES
   dependency-manager.cpp
   expire-tiles.cpp
   gazetteer-style.cpp
+  geom.cpp
   geometry-processor.cpp
   input.cpp
   logging.cpp
