--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -43,6 +43,7 @@ set_test(test-db-copy-thread)
 set_test(test-db-copy-mgr)
 set_test(test-domain-matcher LABELS NoDB)
 set_test(test-expire-tiles LABELS NoDB)
+set_test(test-geom LABELS NoDB)
 set_test(test-middle)
 set_test(test-options-database LABELS NoDB)
 set_test(test-options-parse LABELS NoDB)
