--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -27,5 +27,7 @@ else()
     message(STATUS "  Manual page can not be built")
 endif()
 
-install(FILES osm2pgsql.1 DESTINATION share/man/man1)
+if (INSTALL_OSM2PGSQL)
+    install(FILES osm2pgsql.1 DESTINATION share/man/man1)
+endif()
 
