Add new ordered_index_t class
This will be used in the new ram middle for efficiently storing
node locations, way node lists, tags etc.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,6 +14,7 @@ set(osm2pgsql_lib_SOURCES
   node-persistent-cache.cpp
   node-ram-cache.cpp
   options.cpp
+  ordered-index.cpp
   osmdata.cpp
   osmium-builder.cpp
   output-gazetteer.cpp
